# GaussianSplattingVRViewerUnity

./: .gitattributes  .gitmodules  Licence.md  README.md
GaussianSplattingVRViewer/: .gitignore  README.md
GaussianSplattingVRViewer/Assets/GaussianSplattingPlugin/: default_model.bytes
GaussianSplattingVRViewer/Assets/GaussianSplattingPlugin/Material/: GaussianSplattingCameraDepthMaterial.mat  GaussianSplattingCameraDepthShader.shader  GaussianSplattingCameraMaterial.mat  GaussianSplattingCameraShader.shader
GaussianSplattingVRViewer/Assets/GaussianSplattingPlugin/Scripts/: GaussianSplatting.cs  GaussianSplattingCamera.cs  GaussianSplattingCameraBlit.cs  GaussianSplattingModel.cs  Info.cs  TrackTRS.cs
GaussianSplattingVRViewer/Assets/Materials/: Cube.mat  CubeHover.mat  CubeSelected.mat  PostProc.mat  PostProc.shader
GaussianSplattingVRViewer/Assets/Prefabs/: Grabable Gaussian Model.prefab  Model List Item.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/: XRI Default Input Actions.inputactions
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/DemoSceneAssets/Models/: Primitive_Pyramid.fbx  Primitive_Torus.fbx  PushButton.fbx
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/DemoSceneAssets/Prefabs/: Interactables Sample.prefab  UI Sample.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/DemoSceneAssets/Prefabs/Climb/: Climb Sample.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/DemoSceneAssets/Prefabs/Interactables/: Interaction Affordance.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/DemoSceneAssets/Prefabs/UI/: Icon Button.prefab  Scroll UI Sample.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/Models/: Primitive_Cylinder.fbx  Primitive_Wedge.fbx  XRControllerLeft.fbx  XRControllerRight.fbx
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/Prefabs/: XR Interaction Setup.prefab  XR Origin (XR Rig).prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/Prefabs/Controllers/: XR Controller Left.prefab  XR Controller Right.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/Prefabs/Interactors/: Gaze Interactor.prefab  Poke Interactor.prefab  Ray Interactor.prefab  Teleport Interactor.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/Prefabs/Teleport/: Blocking Teleport Reticle.prefab  Directional Teleport Reticle.prefab
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/Presets/: XRI Default Gaze Controller.preset  XRI Default Left ActionBasedControllerManager.preset  XRI Default Right ActionBasedControllerManager.preset
GaussianSplattingVRViewer/Assets/Samples/XR Interaction Toolkit/2.5.1/Starter Assets/Tunneling Vignette/: TunnelingVignette.mat  TunnelingVignette.prefab  TunnelingVignetteHemisphere.fbx
GaussianSplattingVRViewer/Assets/Scenes/: GaussianSplattingCam.unity  GaussianSplattingVR.unity
GaussianSplattingVRViewer/Assets/Scripts/: AssetByteModelToPlyFile.cs  MainMenuSwitcher.cs  MeasureLine.cs  ModelLoader.cs  ModelLoaderItem.cs  RenderCallbacksTest.cs  SelectionBox.cs
GaussianSplattingVRViewer/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
GaussianSplattingVRViewer/Assets/XR/Settings/: OpenXR Package Settings.asset
GaussianSplattingVRViewer/Assets/XRI/Settings/Resources/: InteractionLayerSettings.asset
GaussianSplattingVRViewer/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset  TagManager.asset
GaussianSplattingVRViewer/UserSettings/: EditorUserSettings.asset
GaussianSplattingVRViewer/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
UnityPlugin/: CMakeLists.txt  README.md
UnityPlugin/dependencies/eigen/include/Eigen/src/Core/arch/CUDA/: Half.h
UnityPlugin/dependencies/eigen/share/eigen3/cmake/: Eigen3Config.cmake  Eigen3ConfigVersion.cmake
UnityPlugin/dependencies/glew/glew-2.0.0/include/GL/: glew.h
UnityPlugin/dependencies/glew/glew-2.0.0/lib/: glew32.exp  glew32.lib  glew32d.exp  glew32d.lib  glew32s.lib  glew32sd.lib
UnityPlugin/dependencies/glew/glew-2.0.0/lib64/: glew32.exp  glew32.lib  glew32d.exp  glew32d.lib  glew32s.lib  glew32sd.lib
UnityPlugin/include/: CudaKernels.h  DXPluginAPI.h  GLPluginAPI.h  GaussianSplatting.h  PlatformBase.h  PluginAPI.h  plugin.h
UnityPlugin/include/Unity/: IUnityGraphics.h
UnityPlugin/source/: CudaKernels.cu  DXPluginAPI.cpp  GLPluginAPI.cpp  GaussianSplatting.cpp  PluginAPI.cpp  plugin.cpp
